
	* configure.in: require librep 0.90.1

	* lisp/sawfish/wm/ext/infinite-desktop.jl: fixed cursor warping [Jeremy Hankins]

	* lisp/sawfish/wm/defaults.jl: update GNOME-Check for recent versions [Alexey I. Froloff]

	* lisp/sawfish/wm/placement/stagger.jl: fix group of stagger option

	* sawfish.desktop
	* sawfish-wm.dektop: fixed a typo, removed unneeded entries

2009-07-18  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widget.jl: 	- allow negative values in spinbuttons in sawfish-ui
					- connect spinbuttons to value-changed signal (allows typing in the value manually)

	* lisp/sawfish/wm/state/maximize.jl
	* lisp/sawfish/wm/ext/match-window.jl: added fullscreen-xinerama window matcher [Jeremy Hankins]

2009-07-15  Christopher Bratusek <zanghar@freenet.de>
	* src/Makefile.in: add --tag=CC there necessary on some systems [Gentoo]

	* lisp/sawfish/wm/ext/match-window.jl: added fullscreen and new-workspace matches [Jeremy Hankins]

2009-07-10  Christopher Bratusek <zanghar@freenet.de>
	* sawfish-ksm.desktop: make sawfish appear in KDEs WM Selector

2009-07-09  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/move-cursor.jl: Fixed small glitch

2009-07-04  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tab.jl: make changed value of
	raise-tabs-on-hover take effect immediately

2009-07-03  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: post-release version bump to 1.6.0 [branched 1.5.0],
	bump rep-gtk requirement to 0.90.0, therefore bumped gtk+ requirement
	to 2.12.0

	* lisp/sawfish/gtk/color-preview.jl: use GtkColorButton instead of
	GtkPreview (for rep-gtk 0.90.0)

	* lisp/sawfish/wm/commands/move-cursor.jl: added 5 new move-cursor
	command 4 for moving diagonally (move-cursor -northwest, -northeast,
	southwest, southeast) and move-cursor-center

	* man/sawfish.texi: updated doc for new move-cursor-commands

	* man/news.texi: added 1.6.0 section, updated
