@@ -38,6 +38,7 @@ they occurred between. For more detailed information see the
 
 @item Added fullscreen, fullscreen-xinerama and new-workspace matches [Jeremy Hankins]
 
+@item Make strings in sawfish-ui fully translatable [Alexey I. Froloff]
 @end itemize
 @item Other Changes:
 @itemize @minus
