@@ -12,6 +12,8 @@
 	* sawfish.desktop
 	* sawfish-wm.dektop: fixed a typo, removed unneeded entries
 
+	* lisp/sawfish/ui/slot.jl: Re-add patch to make strings fully translatable [Alexey I. Froloff]
+
 2009-07-18  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widget.jl: 	- allow negative values in spinbuttons in sawfish-ui
 					- connect spinbuttons to value-changed signal (allows typing in the value manually)
